@@ -5,11 +5,11 @@ import fuzs.arcanelanterns.config.ServerConfig;
 import fuzs.arcanelanterns.init.ModRegistry;
 import fuzs.arcanelanterns.mixin.accessor.LivingEntityAccessor;
 import net.minecraft.core.BlockPos;
+import net.minecraft.server.level.ServerLevel;
 import net.minecraft.world.entity.LivingEntity;
 import net.minecraft.world.entity.TamableAnimal;
 import net.minecraft.world.entity.animal.Animal;
 import net.minecraft.world.level.GameRules;
-import net.minecraft.world.level.Level;
 import net.minecraft.world.level.block.state.BlockState;
 import net.minecraft.world.phys.AABB;
 
@@ -34,31 +34,30 @@ public class BrilliantLanternBlockEntity extends LanternBlockEntity {
                                 this.getBlockPos().getZ() + 0.5 - horizontalRange,
                                 this.getBlockPos().getX() + 0.5 + horizontalRange,
                                 this.getBlockPos().getY() + 0.5 + verticalRange,
-                                this.getBlockPos().getZ() + 0.5 + horizontalRange
-                        ),
-                        BrilliantLanternBlockEntity::isValidAnimal
-                );
+                                this.getBlockPos().getZ() + 0.5 + horizontalRange),
+                        BrilliantLanternBlockEntity::isValidAnimal);
         if (!animals.isEmpty()) {
-            Animal animal = animals.get(0);
+            Animal animal = animals.getFirst();
             // make sure equipment still drops, but nothing else
-            killWithoutLoot(this.getLevel(), animal);
+            killWithoutLoot((ServerLevel) this.getLevel(), animal);
             // allow experience to drop
             animal.setLastHurtByPlayer(null);
-            ((LivingEntityAccessor) animal).arcanelanterns$dropExperience(null);
+            ((LivingEntityAccessor) animal).arcanelanterns$dropExperience((ServerLevel) this.getLevel(), null);
             animal.skipDropExperience();
         }
         this.ticks = 0;
     }
 
     private static boolean isValidAnimal(Animal animal) {
-        return animal.shouldDropExperience() && (!(animal instanceof TamableAnimal tamableAnimal) || !tamableAnimal.isTame()) && !ArcaneLanterns.CONFIG.get(
-                ServerConfig.class).brilliantLantern.blacklist.contains(animal.getType());
+        return animal.shouldDropExperience() &&
+                (!(animal instanceof TamableAnimal tamableAnimal) || !tamableAnimal.isTame()) &&
+                !ArcaneLanterns.CONFIG.get(ServerConfig.class).brilliantLantern.blacklist.contains(animal.getType());
     }
 
-    private static void killWithoutLoot(Level level, LivingEntity entity) {
-        boolean doMobLoot = level.getGameRules().getBoolean(GameRules.RULE_DOMOBLOOT);
-        level.getGameRules().getRule(GameRules.RULE_DOMOBLOOT).set(false, level.getServer());
-        entity.kill();
-        level.getGameRules().getRule(GameRules.RULE_DOMOBLOOT).set(doMobLoot, level.getServer());
+    private static void killWithoutLoot(ServerLevel serverLevel, LivingEntity entity) {
+        boolean doMobLoot = serverLevel.getGameRules().getBoolean(GameRules.RULE_DOMOBLOOT);
+        serverLevel.getGameRules().getRule(GameRules.RULE_DOMOBLOOT).set(false, serverLevel.getServer());
+        entity.kill(serverLevel);
+        serverLevel.getGameRules().getRule(GameRules.RULE_DOMOBLOOT).set(doMobLoot, serverLevel.getServer());
     }
 }
